# todoer

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
account/: urls.py  views.py
account/templates/account/: login.html  register.html
src/static/css/: todoer.css
src/task/: forms.py  models.py  urls.py
src/task/templates/layouts/: base.html  form_errors.html
src/task/templates/task/: task_confirm_delete.html
src/todoer/: settings.py
task/: views.py
task/migrations/: 0001_create_task_model.py
task/templates/task/: task.html  task_form.html  task_list.html
todoer/: asgi.py  settings.py  urls.py  wsgi.py
