[tool.poetry]
name = "todoer"
version = "0.1.0"
description = "A Simple ToDo Tast Management App"
authors = ["aungko"]

[tool.poetry.dependencies]
python = "3.9.4"
Django = "3.2"
django-bootstrap5 = "1.0.0"
gunicorn = "20.1.0"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]
isort = "5.8.0"
black = "21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
